samples/_failures_safe/1761651675_552614_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0811b40.c: In function ‘print_stats’:
./samples/SAFE/__tmp_b0811b40.c:138:9: error: expected expression at end of input
  138 |         double avg_bytes =
      |         ^~~~~~
./samples/SAFE/__tmp_b0811b40.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0811b40.c:138:9: error: expected declaration or statement at end of input
